guides/precise-prefix-cache-aware/httproute.gke.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-d-kv-events
  namespace: llm-d-precise
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: infra-kv-events-inference-gateway
  rules:
    - backendRefs:
      - group: inference.networking.k8s.io
        kind: InferencePool
        name: gaie-kv-events
        weight: 1
      matches:
      - path:
          type: PathPrefix
          value: /
